// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no related articles 1`] = `null`;

exports[`2. analytics with no related articles 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "DEFAULT",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`3. a single related article 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://test.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Test Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
                <div>
                  <span>
                    Camilla Long
                  </span>
                  <span>
                    , Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. analytics for a single related article 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Camilla Long",
            "headline": "Test Headline",
            "id": "48604618-fb0e-11e7-a987-7fcf5e9983dc",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "DEFAULT",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`5. two related articles 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://first.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop1.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  First Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
                <div>
                  <span>
                    Camilla Long, Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
        <div />
        <div>
          <Link
            url="https://second.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop2.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Second Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  January 17 2018, 12:00pm
                </div>
                <div>
                  <span>
                    Camilla Long, Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`6. analytics for two related articles 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Camilla Long, Environment Editor",
            "headline": "First Headline",
            "id": "58604618-fb0e-11e7-a987-7fcf5e9983dc",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
          Object {
            "byline": "Camilla Long, Environment Editor",
            "headline": "Second Headline",
            "id": "8b47c1b8-fb05-11e7-a987-7fcf5e9983dc",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-2",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "DEFAULT",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`7. three related articles 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://first.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop1.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  First Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 145
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
                <div>
                  <span>
                    Camilla Long, Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
        <div />
        <div>
          <Link
            url="https://second.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop2.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Second Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 145
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  January 17 2018, 12:00pm
                </div>
                <div>
                  <span>
                    Camilla Long, Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
        <div />
        <div>
          <Link
            url="https://third.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop3.io",
                }
              }
              imageRatio={1.7777777777777777}
              isReversed={false}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    BAYEUX TAPESTRY
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Third Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 145
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  January 17 2018, 12:00pm
                </div>
                <div>
                  <span>
                    Camilla Long, Environment Editor
                  </span>
                </div>
              </div>
            </Card>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`8. analytics for three related articles 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Camilla Long, Environment Editor",
            "headline": "First Headline",
            "id": "58604618-fb0e-11e7-a987-7fcf5e9983dc",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
          Object {
            "byline": "Camilla Long, Environment Editor",
            "headline": "Second Headline",
            "id": "8b47c1b8-fb05-11e7-a987-7fcf5e9983dc",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-2",
          },
          Object {
            "byline": "Camilla Long, Environment Editor",
            "headline": "Third Headline",
            "id": "8b47c1b8-fb05-11e7-a987-7fcf5e99898c",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-3",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "DEFAULT",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;
